Update Router and Add JWT Middleware
