# routers/commentsRouter_controllers.go
@@ -7,109 +7,10 @@ import (
 
 func init() {
 
-	beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Post",
-			Router:           "/",
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "GetAll",
-			Router:           "/",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"],
+	beego.GlobalControllerRouter["lelangbackend/controllers:AuctionController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:AuctionController"],
 		beego.ControllerComments{
 			Method:           "Get",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Put",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"put"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Delete",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:UserController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Post",
-			Router:           "/",
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:UserController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "GetAll",
-			Router:           "/",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:UserController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Get",
-			Router:           "/:uid",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:UserController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Put",
-			Router:           "/:uid",
-			AllowHTTPMethods: []string{"put"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:UserController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Delete",
-			Router:           "/:uid",
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:UserController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Login",
-			Router:           "/login",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["lelangbackend/controllers:UserController"] = append(beego.GlobalControllerRouter["lelangbackend/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Logout",
-			Router:           "/logout",
+			Router:           "/api/lelang",
 			AllowHTTPMethods: []string{"get"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
